bug 13299: Basic Installation wizard: Fields in Add zone page are not aligned properly

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -685,7 +685,7 @@ body.login {
 }
 
 .install-wizard .step .setup-form .field .name {
-  width: 93px;
+  width: 98px;
   text-align: right;
   float: left;
   font-size: 13px;
